examples/invalid/08_struct_missing_field.lane
// invalid: struct literals must provide every field
struct Point {
  x : Int
  y : Int
}

let point : Point = Point::{ x: 1 }

